swim_form/src/tests/derive/attributes/missing_arg.stderr
error: Exactly one Value name binding must be provided
  --> $DIR/missing_arg.rs:17:1
   |
17 | #[form]
   | ^^^^^^^
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
